# gemini-file-search-tool

./: .gitleaks.toml  .mise.toml  CHANGES_SUMMARY.md  CLAUDE.md  Makefile  README.md  pyproject.toml  research_gemini_file_types.md
.claude-plugin/: marketplace.json
.github/workflows/: publish.yml
docs/: cache-design.md
gemini_file_search_tool/: __init__.py  cli.py  logging_config.py  utils.py
gemini_file_search_tool/commands/: __init__.py  cache_commands.py  document_commands.py  query_commands.py  store_commands.py
gemini_file_search_tool/core/: __init__.py  cache.py  client.py  documents.py  query.py  query_enhancement.py  stores.py
gemini_file_search_tool/prompts/: __init__.py  code_rag.py  generic_rag.py  obsidian.py
plugins/gemini-file-search-tool/.claude-plugin/: plugin.json
plugins/gemini-file-search-tool/commands/: create-store.md  list-stores.md  query.md  sync-cache.md  upload.md
references/: implementing-multi-level-verbosity-python-logging.md
tests/: __init__.py  test_cache.py  test_query_enhancement.py  test_utils.py
