[project]
name = "gemini-file-search-tool"
version = "0.1.0"
description = "A CLI tool for managed RAG using Google Gemini File Search API"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.7",
    "google-genai>=0.3.0",
    "tqdm>=4.66.0",
    "requests>=2.31.0",
]
authors = [
    {name = "Dennis Vriend", email = "dvriend@ilionx.com"}
]
license = {text = "MIT"}
readme = "README.md"
keywords = [
    "gemini",
    "rag",
    "retrieval-augmented-generation",
    "file-search",
    "ai",
    "nlp",
    "document-search",
    "semantic-search",
    "google-ai",
    "cli-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Environment :: Console",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/dnvriend/gemini-file-search-tool"
Repository = "https://github.com/dnvriend/gemini-file-search-tool"
Issues = "https://github.com/dnvriend/gemini-file-search-tool/issues"
Documentation = "https://github.com/dnvriend/gemini-file-search-tool#readme"

[project.scripts]
gemini-file-search-tool = "gemini_file_search_tool.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.7.0",
    "pytest>=7.4.0",
    "types-requests>=2.31.0",
    "types-tqdm>=4.66.0",
    "bandit>=1.7.0",
    "pip-audit>=2.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
strict = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Skip assert_used (common in tests)
